// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusByLocation component renders all locations are down 1`] = `
<h2
  class="euiTitle emotion-euiTitle-s"
>
  Down in 2 locations
</h2>
`;

exports[`StatusByLocation component renders properly against props 1`] = `
<EuiTitle
  size="s"
>
  <h2>
    <MemoizedFormattedMessage
      defaultMessage="{status} in {loc} locations"
      id="xpack.uptime.monitorStatusBar.locations.upStatus"
      values={
        Object {
          "loc": "2",
          "status": "Up",
        }
      }
    />
  </h2>
</EuiTitle>
`;

exports[`StatusByLocation component renders when down in some locations 1`] = `
<h2
  class="euiTitle emotion-euiTitle-s"
>
  Down in 1/2 locations
</h2>
`;

exports[`StatusByLocation component renders when only one location and it is down 1`] = `
<h2
  class="euiTitle emotion-euiTitle-s"
>
  Down in 1 location
</h2>
`;

exports[`StatusByLocation component renders when only one location and it is up 1`] = `
<h2
  class="euiTitle emotion-euiTitle-s"
>
  Up in 1 location
</h2>
`;

exports[`StatusByLocation component renders when up in all locations 1`] = `
<h2
  class="euiTitle emotion-euiTitle-s"
>
  Up in 2 locations
</h2>
`;
